--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
     .error { color: red; }
     .success { color: green; }
     .warning { color: orange; }
-  </style>
+  
+.warning a {
+  color: orange;
+  text-decoration: underline;
+}
+.warning a:hover {
+  color: #ffae42;
+}
+
+</style>
 </head>
 <body>
   <header>
@@ -162,7 +171,26 @@
       }
     });
 
-      
+    document.getElementById('shodanForm').addEventListener('submit', async function (e) {
+      e.preventDefault();
+      const ip = document.getElementById('ipInput').value;
+      const resultDiv = document.getElementById('shodanResult');
+      resultDiv.innerHTML = '<p class="loading">Проверяем...</p>';
+      try {
+        const response = await fetch('https://safe-pass-api.onrender.com/shodan?ip=' + encodeURIComponent(ip));
+        const data = await response.json();
+        if (data.error) {
+          resultDiv.innerHTML = '<p class="error">' + data.error + '</p>';
+          return;
+        }
+        let html = `<p class="success">Найдено устройство ${data.ip_str}, организация: ${data.org || 'n/a'}</p><ul>`;
+        html += `<li>Открытые порты: ${data.ports.join(', ')}</li>`;
+        html += '</ul>'; resultDiv.innerHTML = html;
+      } catch {
+        resultDiv.innerHTML = '<p class="success">IP не найден.</p>';
+      }
+    });
+  
     async function fetchClientIP() {
       try {
         const res = await fetch('https://api.ipify.org?format=json');
@@ -216,13 +244,11 @@
       }
     });
 
-    
     document.getElementById('shodanForm').addEventListener('submit', async function (e) {
       e.preventDefault();
       const ip = document.getElementById('ipInput').value;
       fetchIPInfo(ip);
     });
-
 </script>
 </body>
 </html>
