--- a/index.html
+++ b/index.html
@@ -1,254 +1,173 @@
 <!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SafePassAI — Проверка утечек</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="/favicon.ico" />
-  <style>
-    .tab-buttons { text-align: center; margin: 20px 0; }
-    .tab-button { margin: 0 5px; padding: 10px 20px; background-color: #eee; border: none; cursor: pointer; font-weight: bold; }
-    .tab-button.active { background-color: #4CAF50; color: white; }
-    .tab-content { display: none; padding: 0 20px; max-width: 800px; margin: 0 auto; }
-    .tab-content.active { display: block; }
-    .loading { color: gray; }
-    .error { color: red; }
-    .success { color: green; }
-    .warning { color: orange; }
-  
-.warning a {
-  color: orange;
-  text-decoration: underline;
-}
-.warning a:hover {
-  color: #ffae42;
-}
-
-</style>
-</head>
-<body>
-  <header>
-    <div class="navbar container">
-      <button class="hamburger" id="hamburgerBtn">☰</button>
-      <div class="nav-left" id="navMenu">
-        <a href="https://t.me/SafePassAIBot" target="_blank">TG-бот</a>
-        <a href="/" class="active">Проверка</a>
-        <a href="/generate">Генерация пароля</a>
-        <a href="/security">Блог безопасности</a>
-        <a href="/about">О проекте</a>
-        <button id="donate-btn" class="donate-button">Поддержать проект</button>
+<html lang="ru" class="dark">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SafePassAI — Проверка безопасности</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = { darkMode: 'class' }
+    </script>
+    <link rel="icon" href="/favicon.ico" />
+  </head>
+  <body class="bg-gray-900 text-gray-100 font-sans">
+    <header class="w-full px-6 py-4 flex items-center justify-between border-b border-gray-800">
+      <h1 class="text-xl font-bold">SafePassAI <span class="text-sm bg-yellow-500 text-black px-2 py-1 rounded ml-2">Beta</span></h1>
+      <div class="flex gap-4">
+        <a href="https://t.me/SafePassAIBot" class="hover:underline" target="_blank">TG-бот</a>
+        <button id="themeToggle">🌙/☀️</button>
       </div>
-      <div class="nav-right">
-        <h1>SafePassAI</h1>
+    </header>
+
+    <main class="p-6 max-w-4xl mx-auto">
+      <!-- Hero -->
+      <section class="text-center my-10">
+        <h2 class="text-3xl font-bold mb-4">Проверь, не скомпрометированы ли твои данные</h2>
+        <p class="text-gray-400 mb-6">Проверка по email, IP, телефону и даже угадывание паролей</p>
+      </section>
+
+      <!-- Вкладки -->
+      <div class="flex justify-center gap-2 mb-6">
+        <button class="tab-btn px-4 py-2 rounded bg-green-600" data-tab="ip">IP</button>
+        <button class="tab-btn px-4 py-2 rounded bg-gray-700" data-tab="leak">Утечки</button>
+        <button class="tab-btn px-4 py-2 rounded bg-gray-700" data-tab="akinator">Акинатор</button>
       </div>
-    </div>
-  </header>
-  <main class="container">
-    <div class="tab-buttons">
-      <button class="tab-button active" data-tab="leak">Проверка утечек</button>
-      <button class="tab-button" data-tab="common">Популярные пароли</button>
-      <button class="tab-button" data-tab="generator">Акинатор пароля</button>
-      <button class="tab-button" data-tab="shodan">Проверка по IP</button>
-    </div>
 
-    <section id="tab-leak" class="tab-content active">
-      <p>Введите email или логин — мы проверим, не были ли ваши данные скомпрометированы в утечках.</p>
-      <form id="leakCheckForm">
-        <input type="text" id="queryInput" placeholder="Введите данные..." required />
-        <button type="submit">Проверить</button>
-      </form>
-      <div id="result"></div>
-    </section>
+      <!-- IP Check -->
+      <section id="tab-ip" class="tab-section">
+        <p class="mb-4">Мы определим ваш IP и проверим: гео, VPN/Proxy, риск анонимности и открытые порты.</p>
+        <form id="ipForm" class="flex gap-2 mb-4">
+          <input id="ipInput" type="text" placeholder="Введите IP..." class="flex-1 px-3 py-2 rounded bg-gray-800" required />
+          <button type="submit" class="px-4 py-2 bg-blue-600 rounded">Проверить</button>
+        </form>
+        <div id="ipResult" class="text-sm"></div>
+      </section>
 
-    <section id="tab-common" class="tab-content">
-      <p>Введите пароль (не сохраняется) — мы сравним его с популярными, чтобы вы знали, насколько он надёжен.</p>
-      <form id="passwordCheckForm">
-        <input type="password" id="passwordInput" placeholder="Введите пароль..." required />
-        <button type="submit">Проверить</button>
-      </form>
-      <div id="passwordResult"></div>
-    </section>
+      <!-- Leak Check -->
+      <section id="tab-leak" class="tab-section hidden">
+        <form id="leakForm" class="flex gap-2 mb-4">
+          <input id="queryInput" type="text" placeholder="Email или телефон..." class="flex-1 px-3 py-2 rounded bg-gray-800" required />
+          <button type="submit" class="px-4 py-2 bg-blue-600 rounded">Проверить</button>
+        </form>
+        <div id="leakResult" class="text-sm"></div>
+      </section>
 
-    <section id="tab-generator" class="tab-content">
-      <p>Введите имя, город и год рождения — мы сгенерируем 10 возможных паролей, которые вы могли бы использовать.</p>
-      <form id="wordlistForm">
-        <input type="text" id="nameInput" placeholder="Имя" required />
-        <input type="text" id="cityInput" placeholder="Город" required />
-        <input type="text" id="yearInput" placeholder="Год рождения" required />
-        <button type="submit">Сгенерировать</button>
-      </form>
-      <div id="wordlistResult"></div>
-    </section>
+      <!-- Akinator -->
+      <section id="tab-akinator" class="tab-section hidden">
+        <div id="akinatorQuestion">Используешь имя в пароле?</div>
+        <div class="mt-4 flex gap-2">
+          <button class="akinator-btn px-3 py-1 bg-green-600 rounded" data-answer="yes">Да</button>
+          <button class="akinator-btn px-3 py-1 bg-red-600 rounded" data-answer="no">Нет</button>
+          <button class="akinator-btn px-3 py-1 bg-gray-600 rounded" data-answer="maybe">Не знаю</button>
+        </div>
+        <div id="akinatorResult" class="mt-4 text-sm"></div>
+      </section>
+    </main>
 
-    <section id="tab-shodan" class="tab-content">
-      <p id="ipInfoMessage">Определяем ваш IP...</p>
-      <p>Введите IP-адрес — мы покажем, какие открытые порты и сервисы видны из интернета.</p>
-      <form id="shodanForm">
-        <input type="text" id="ipInput" placeholder="Введите IP-адрес..." required />
-        <button type="submit">Проверить</button>
-      </form>
-      <div id="shodanResult"></div>
-<p class="warning" style="margin-top: 20px; font-size: 0.95em;">
-  Мы не храним ваши данные, мы берем их из открытых источников.
-  Для того, чтобы узнать откуда данная информация — можете ознакомиться на 
-  <a href="https://habr.com/ru/companies/Linx/articles/526508/" target="_blank">Хабр</a>,
-  а как удалить — также можете узнать там.
-</p>
+    <footer class="text-center text-gray-500 text-sm py-6 border-t border-gray-800">
+      © 2025 SafePassAI
+    </footer>
 
-    </section>
-  </main>
-  <footer><p>© 2025 SafePassAI</p></footer>
-  <script>
-    document.querySelectorAll('.tab-button').forEach(button => {
-      button.addEventListener('click', () => {
-        document.querySelectorAll('.tab-button').forEach(btn => btn.classList.remove('active'));
-        button.classList.add('active');
-        document.querySelectorAll('.tab-content').forEach(tab => tab.classList.remove('active'));
-        document.getElementById('tab-' + button.dataset.tab).classList.add('active');
+    <script>
+      const sections = document.querySelectorAll('.tab-section');
+      const tabs = document.querySelectorAll('.tab-btn');
+      tabs.forEach(btn => {
+        btn.addEventListener('click', () => {
+          tabs.forEach(b => b.classList.replace('bg-green-600', 'bg-gray-700'));
+          btn.classList.replace('bg-gray-700', 'bg-green-600');
+          sections.forEach(sec => sec.classList.add('hidden'));
+          document.querySelector(`#tab-${btn.dataset.tab}`).classList.remove('hidden');
+        });
       });
-    });
 
-    document.getElementById('leakCheckForm').addEventListener('submit', async function (e) {
-      e.preventDefault();
-      const query = document.getElementById('queryInput').value;
-      const resultDiv = document.getElementById('result');
-      resultDiv.innerHTML = '<p class="loading">Проверяем...</p>';
-      try {
-        const response = await fetch('https://safe-pass-api.onrender.com/check?query=' + encodeURIComponent(query));
-        const data = await response.json();
-        if (data && data.found) {
-          let html = `<p class="success">Найдены утечки: ${data.found}</p><ul>`;
-          data.results.forEach(item => { html += `<li>${item.name || item.source}</li>`; });
-          html += '</ul>'; resultDiv.innerHTML = html;
-        } else {
-          resultDiv.innerHTML = '<p class="warning">Утечек не найдено</p>';
-        }
-      } catch {
-        resultDiv.innerHTML = '<p class="error">Ошибка соединения.</p>';
-      }
-    });
+      document.getElementById('themeToggle').addEventListener('click', () => {
+        document.documentElement.classList.toggle('dark');
+      });
 
-    document.getElementById('passwordCheckForm').addEventListener('submit', async function (e) {
-      e.preventDefault();
-      const password = document.getElementById('passwordInput').value;
-      const resultDiv = document.getElementById('passwordResult');
-      resultDiv.innerHTML = '<p class="loading">Проверяем...</p>';
-      try {
-        const response = await fetch('https://safe-pass-api.onrender.com/check-password', {
-          method: 'POST', headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ password })
-        });
-        const data = await response.json();
-        resultDiv.innerHTML = data.is_common ? `<p class="error">${data.message}</p>` : `<p class="success">${data.message}</p>`;
-      } catch {
-        resultDiv.innerHTML = '<p class="error">Ошибка соединения.</p>';
-      }
-    });
-
-    document.getElementById('wordlistForm').addEventListener('submit', async function (e) {
-      e.preventDefault();
-      const name = document.getElementById('nameInput').value;
-      const city = document.getElementById('cityInput').value;
-      const year = document.getElementById('yearInput').value;
-      const resultDiv = document.getElementById('wordlistResult');
-      resultDiv.innerHTML = '<p class="loading">Генерируем...</p>';
-      try {
-        const response = await fetch('https://safe-pass-api.onrender.com/generate-passwords', {
-          method: 'POST', headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ name, city, year })
-        });
-        const data = await response.json();
-        if (data.passwords) {
-          let html = '<p class="success">Возможные пароли:</p><ul>';
-          data.passwords.forEach(pw => html += `<li>${pw}</li>`);
-          html += '</ul>'; resultDiv.innerHTML = html;
-        } else {
-          resultDiv.innerHTML = '<p class="error">Ошибка генерации.</p>';
-        }
-      } catch {
-        resultDiv.innerHTML = '<p class="error">Ошибка соединения.</p>';
-      }
-    });
-
-    document.getElementById('shodanForm').addEventListener('submit', async function (e) {
-      e.preventDefault();
-      const ip = document.getElementById('ipInput').value;
-      const resultDiv = document.getElementById('shodanResult');
-      resultDiv.innerHTML = '<p class="loading">Проверяем...</p>';
-      try {
-        const response = await fetch('https://safe-pass-api.onrender.com/shodan?ip=' + encodeURIComponent(ip));
-        const data = await response.json();
-        if (data.error) {
-          resultDiv.innerHTML = '<p class="error">' + data.error + '</p>';
-          return;
-        }
-        let html = `<p class="success">Найдено устройство ${data.ip_str}, организация: ${data.org || 'n/a'}</p><ul>`;
-        html += `<li>Открытые порты: ${data.ports.join(', ')}</li>`;
-        html += '</ul>'; resultDiv.innerHTML = html;
-      } catch {
-        resultDiv.innerHTML = '<p class="success">IP не найден.</p>';
-      }
-    });
-  
-    async function fetchClientIP() {
-      try {
+      async function fetchClientIP() {
         const res = await fetch('https://api.ipify.org?format=json');
-        const data = await res.json();
-        return data.ip;
-      } catch {
-        return null;
+        return (await res.json()).ip;
       }
-    }
 
-    async function fetchIPInfo(ip) {
-      const resultDiv = document.getElementById('shodanResult');
-      resultDiv.innerHTML = '<p class="loading">Загружаем информацию об IP...</p>';
-      try {
+      async function fetchIPInfo(ip) {
         const res = await fetch(`https://safe-pass-api.onrender.com/ip-info?ip=${ip}`);
-        const data = await res.json();
-        if (data.error) {
-          resultDiv.innerHTML = `<p class="error">${data.error}</p>`;
-          return;
-        }
-        let html = `<p class="success">Информация по IP ${ip}:</p><ul>`;
-        html += `<li><strong>Город:</strong> ${data.city || 'n/a'}</li>`;
-        html += `<li><strong>Страна:</strong> ${data.country || 'n/a'}</li>`;
-        html += `<li><strong>Провайдер:</strong> ${data.isp || 'n/a'}</li>`;
-        html += `<li><strong>Часовой пояс:</strong> ${data.timezone || 'n/a'}</li>`;
-        html += `<li><strong>Местное время:</strong> ${data.local_time || 'n/a'}</li>`;
-        html += `<li><strong>VPN/Proxy:</strong> ${data.proxy || 'Не обнаружено'}</li>`;
-        html += `<li><strong>ASN:</strong> ${data.asn || 'n/a'}</li>`;
-        html += `<li><strong>Reverse DNS:</strong> ${data.reverse_dns || 'n/a'}</li>`;
-        html += `<li><strong>Shodan порты:</strong> ${data.ports?.join(', ') || 'не найдено'}</li>`;
-        
-      if (data.privacy_score_text) {
-        html += `<li><strong>Privacy score:</strong> ${data.privacy_score} — ${data.privacy_score_text}</li>`;
+        return await res.json();
       }
 
-        html += '</ul>';
-        resultDiv.innerHTML = html;
-      } catch {
-        resultDiv.innerHTML = '<p class="error">Ошибка при получении данных.</p>';
-      }
-    }
-
-    document.addEventListener('DOMContentLoaded', async () => {
-      const ip = await fetchClientIP();
-      if (ip) {
-        document.getElementById('ipInfoMessage').textContent = `Ваш IP: ${ip}`;
+      document.addEventListener('DOMContentLoaded', async () => {
+        const ip = await fetchClientIP();
         document.getElementById('ipInput').value = ip;
-        fetchIPInfo(ip);
-      } else {
-        document.getElementById('ipInfoMessage').textContent = 'Не удалось определить ваш IP';
-      }
-    });
+        const data = await fetchIPInfo(ip);
+        renderIPResult(data);
+      });
 
-    document.getElementById('shodanForm').addEventListener('submit', async function (e) {
-      e.preventDefault();
-      const ip = document.getElementById('ipInput').value;
-      fetchIPInfo(ip);
-    });
-</script>
-</body>
+      document.getElementById('ipForm').addEventListener('submit', async e => {
+        e.preventDefault();
+        const ip = document.getElementById('ipInput').value;
+        const data = await fetchIPInfo(ip);
+        renderIPResult(data);
+      });
+
+      function renderIPResult(data) {
+        const div = document.getElementById('ipResult');
+        if (data.error) return div.innerHTML = `<span class='text-red-400'>${data.error}</span>`;
+        div.innerHTML = `
+          <p><strong>Город:</strong> ${data.city || 'не найдено'}</p>
+          <p><strong>Страна:</strong> ${data.country || 'не найдено'}</p>
+          <p><strong>VPN/Proxy:</strong> ${data.proxy ? 'Да' : 'Нет'}</p>
+          <p><strong>ASN:</strong> ${data.asn || 'не найдено'}</p>
+          <p><strong>Reverse DNS:</strong> ${data.reverse_dns || 'не найдено'}</p>
+          <p><strong>Privacy Score:</strong> ${data.privacy_score ?? '—'}</p>
+        `;
+      }
+
+      document.getElementById('leakForm').addEventListener('submit', async e => {
+        e.preventDefault();
+        const query = document.getElementById('queryInput').value;
+        const res = await fetch(`https://safe-pass-api.onrender.com/check?query=${encodeURIComponent(query)}`);
+        const data = await res.json();
+        const div = document.getElementById('leakResult');
+        if (data && data.found) {
+          div.innerHTML = `<p class='text-green-400'>Найдены утечки: ${data.found}</p><ul class='list-disc ml-5'>` +
+            data.results.map(r => `<li>${r.name || r.source}</li>`).join('') + '</ul>';
+        } else {
+          div.innerHTML = `<p class='text-yellow-400'>Утечек не найдено</p>`;
+        }
+      });
+
+      // Akinator
+      const questions = [
+        { q: "Ты используешь своё имя в пароле?", key: "name" },
+        { q: "Добавляешь ли ты цифры типа 123?", key: "nums" },
+        { q: "Включаешь год рождения?", key: "year" },
+        { q: "Используешь заглавные буквы?", key: "caps" },
+      ];
+      let answers = {}, current = 0;
+      document.querySelectorAll('.akinator-btn').forEach(btn => {
+        btn.addEventListener('click', () => {
+          answers[questions[current].key] = btn.dataset.answer;
+          current++;
+          if (current < questions.length) {
+            document.getElementById('akinatorQuestion').textContent = questions[current].q;
+          } else {
+            showGuesses();
+          }
+        });
+      });
+
+      function showGuesses() {
+        const guesses = [];
+        const name = 'ivan', year = '2001';
+        if (answers.name === 'yes') guesses.push(name);
+        if (answers.name === 'yes' && answers.nums === 'yes') guesses.push(name + '123');
+        if (answers.caps === 'yes') guesses.push(name.charAt(0).toUpperCase() + name.slice(1));
+        if (answers.year === 'yes') guesses.push(name + year);
+        if (guesses.length === 0) guesses.push('password123', 'qwerty', '12345678');
+        document.getElementById('akinatorQuestion').textContent = 'Возможные пароли:';
+        document.getElementById('akinatorResult').innerHTML = '<ul class="list-disc ml-5">' +
+          guesses.map(g => `<li>${g}</li>`).join('') + '</ul>';
+        document.querySelectorAll('.akinator-btn').forEach(b => b.style.display = 'none');
+      }
+    </script>
+  </body>
 </html>
