--- a/index.html
+++ b/index.html
@@ -250,5 +250,39 @@
       fetchIPInfo(ip);
     });
 </script>
+  <!-- GPT-Чат-помощник -->
+<div id="chat-widget" style="position:fixed;bottom:20px;right:20px;width:320px;height:400px;background:#fff;border:1px solid #ccc;border-radius:8px;box-shadow:0 4px 12px rgba(0,0,0,0.1);z-index:9999;font-family:sans-serif;display:flex;flex-direction:column;">
+  <div style="background:#4CAF50;color:white;padding:10px;border-top-left-radius:8px;border-top-right-radius:8px;">Чат с экспертом 44-ФЗ</div>
+  <div id="chat-messages" style="flex-grow:1;overflow-y:auto;padding:10px;font-size:14px;"></div>
+  <input id="chat-input" placeholder="Задайте вопрос..." style="border:none;border-top:1px solid #ccc;padding:10px;font-size:14px;" />
+</div>
+
+<script>
+  const chatInput = document.getElementById('chat-input');
+  const chatMessages = document.getElementById('chat-messages');
+
+  chatInput.addEventListener('keydown', async function(e) {
+    if (e.key === 'Enter' && chatInput.value.trim() !== '') {
+      const question = chatInput.value.trim();
+      chatMessages.innerHTML += `<div><b>Вы:</b> ${question}</div>`;
+      chatInput.value = '';
+      chatMessages.scrollTop = chatMessages.scrollHeight;
+
+      try {
+        const res = await fetch('https://твой-бекенд-домен/ask', {  // <-- сюда вставь URL своего Flask-бекенда
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ question })
+        });
+        const data = await res.json();
+        chatMessages.innerHTML += `<div><b>GPT:</b> ${data.answer}</div>`;
+        chatMessages.scrollTop = chatMessages.scrollHeight;
+      } catch (err) {
+        chatMessages.innerHTML += `<div style="color:red;"><b>Ошибка:</b> не удалось получить ответ</div>`;
+      }
+    }
+  });
+</script>
+
 </body>
 </html>
